# s8_ip_detection

./: CMakeLists.txt  README.md  package.xml  s8_ip_detection.sublime-project  s8_ip_detection.sublime-workspace
parameters/: parameters.json
src/: object_detector.cpp
